third commit 添加的搜索框的点击交互效果

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 <div class="more">
                     <svg t="1743073997168" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4845" width="200" height="200"><path d="M66.488889 211.781818h891.022222c28.198788 0 50.980202-22.238384 50.980202-49.648485 0-27.397172-22.768485-49.648485-50.980202-49.648485H66.488889C38.341818 112.484848 15.508687 134.723232 15.508687 162.133333s22.833131 49.648485 50.980202 49.648485z m891.009293 248.242424H66.488889C38.277172 460.024242 15.508687 482.262626 15.508687 509.672727s22.768485 49.648485 50.980202 49.648485h891.022222c28.198788 0 50.980202-22.238384 50.980202-49.648485-0.012929-27.410101-22.923636-49.648485-50.993131-49.648485z m0 351.63798H66.488889c-28.134141 0-50.980202 22.238384-50.980202 49.648485s22.833131 49.648485 50.980202 49.648485h891.022222c28.198788 0 50.980202-22.238384 50.980202-49.648485-0.012929-27.397172-22.781414-49.648485-50.993131-49.648485z m0 0" p-id="4846"></path></svg>
                 </div>
+                <input type="text" class="hidden" placeholder="Search...">
+
             </div>
         </div>
     </div>
@@ -70,29 +72,38 @@
                     <div class="link"><a href="" class="btn">Learn More</a></div>
                 </div>
                 <div class="img">
-                    <div class="subheader"></div>
-                    <div class="title"></div>
-                    <div class="description"></div>
+                    <div class="subheader">DesignTO Newslett</div>
+                    <div class="title">STAY IN THE KNOW!</div>
+                    <div class="description">
+                        Sign up for the DesignTO monthly newsletter to keep up to date with all things DesignTO.
+                    </div>
                     <div class="link"><a href="" class="btn">Learn More</a></div>
                 </div>
                 <div class="img">
-                    <div class="subheader"></div>
-                    <div class="title"></div>
-                    <div class="description"></div>
+                    <div class="subheader">DesignTO Newslett</div>
+                    <div class="title">STAY IN THE KNOW!</div>
+                    <div class="description">
+                        Sign up for the DesignTO monthly newsletter to keep up to date with all things DesignTO.
+                    </div>
                     <div class="link"><a href="" class="btn">Learn More</a></div>
                 </div>
                 <div class="img">
-                    <div class="subheader"></div>
-                    <div class="title"></div>
-                    <div class="description"></div>
+                    <div class="subheader">DesignTO Newslett</div>
+                    <div class="title">STAY IN THE KNOW!</div>
+                    <div class="description">
+                        Sign up for the DesignTO monthly newsletter to keep up to date with all things DesignTO.
+                    </div>
                     <div class="link"><a href="" class="btn">Learn More</a></div>
                 </div>
                 <div class="img">
-                    <div class="subheader"></div>
-                    <div class="title"></div>
-                    <div class="description"></div>
+                    <div class="subheader">DesignTO Newslett</div>
+                    <div class="title">STAY IN THE KNOW!</div>
+                    <div class="description">
+                        Sign up for the DesignTO monthly newsletter to keep up to date with all things DesignTO.
+                    </div>
                     <div class="link"><a href="" class="btn">Learn More</a></div>
                 </div>
+
             </section>
             <div class="left"></div>
             <div class="right"></div>
@@ -202,7 +213,7 @@
         <section></section>
         <section></section>
     </div>
-    <script src="./js/banner.js"></script>
+    <script src="./js/banner1.js"></script>
     <script src="./js/banner2.js"></script>
     <script src="./js/search.js"></script>
     <script>
